@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyscard/pyscard-1.6.12.ebuild,v 1.1 2011/04/03 21:32:47 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyscard/pyscard-1.6.12.ebuild,v 1.2 2012/02/21 03:22:20 patrick Exp $
 
 EAPI="3"
 PYTHON_DEPEND="2"
@@ -18,8 +18,8 @@ SLOT="0"
 KEYWORDS="~amd64"
 IUSE=""
 
-DEPEND=""
-RDEPEND=""
+DEPEND="sys-apps/pcsc-lite"
+RDEPEND="${DEPEND}"
 
 DOCS="smartcard/ACKS smartcard/ChangeLog smartcard/TODO"
 PYTHON_MODNAME="smartcard"
