@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyscard
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyscard/ChangeLog,v 1.1 2011/04/03 21:32:47 arfrever Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyscard/ChangeLog,v 1.2 2012/02/21 03:22:20 patrick Exp $
+
+  21 Feb 2012; Patrick Lauer <patrick@gentoo.org> pyscard-1.6.12.ebuild:
+  Adding pscs-lite dep for #403803
 
 *pyscard-1.6.12 (03 Apr 2011)
 
